--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.4",
   "description": "some apis for bots",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "dlchk.js"
   },
@@ -14,7 +15,7 @@
     "axios": "^1.7.2",
     "index": "^0.4.0",
     "index.js": "^0.0.3",
-    "noobs-api": "^1.0.3"
+    "noobs-api": "^1.0.4"
   },
   "repository": {
     "type": "git",
