--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,10 @@
     {
       "source": "/",
       "destination": "/public/index.html"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/public/index.html"
     }
   ]
 }
